some changes to exploration. beginning exploration of pure rotation hidden and relu ff

--- a/RRNN_exploration.ipynb
+++ b/RRNN_exploration.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "x = cgt.matrix(fixed_shape=(size_batch, size_x))\n",
-    "xform_h_param = nn.TensorParam((size_batch, size_mem), name=\"rotxform\")\n",
+    "xform_h_param = nn.TensorParam((2 * k_h, size_mem), name=\"rotxform\")\n",
     "xform_h_non = xform_h_param.weight\n",
     "xform_h_norm = cgt.norm(xform_h_non, axis=1, keepdims=True)\n",
     "xform_h = cgt.broadcast('/', xform_h_non, xform_h_norm, \"xx,x1\")\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -122,11 +122,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.20277715 -0.8574506   0.04672915 -0.47061333]\n",
-      " [ 0.20047638 -0.81230247  0.07082924 -0.54310024]\n",
-      " [ 0.19779009 -0.74455643 -0.01488984 -0.63741142]\n",
-      " [ 0.23282269 -0.68355     0.10571991 -0.68364942]]\n",
-      "[ 1.00000036  1.00000036  1.00000012  1.00000012]\n",
+      "[[ 0.46639985 -0.13617726 -0.83365595  0.26257211]\n",
+      " [ 0.52262288 -0.0058302  -0.79804057  0.29993784]\n",
+      " [ 0.4850145   0.03708118 -0.80431843  0.34125924]\n",
+      " [ 0.63327622  0.1306653  -0.71277249  0.27174002]]\n",
+      "[ 0.9999997  1.         1.         0.9999997]\n",
       "[ 1.  1.  1.  1.]\n"
      ]
     }
